feat: Complete CI/CD setup with Terraform and GitHub Actions

--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -67,7 +67,7 @@ jobs:
       working-directory: ./infra/terraform/environments/dev
 
     - name: Terraform Security Scan
-      uses: aquasecurity/tfsec@main
+      uses: aquasecurity/tfsec@v1.32.2
       with:
         directory: ./infra/terraform
 
