--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -53,9 +53,11 @@ jobs:
     - name: Terraform Init
       run: |
         if [ "${{ steps.setup-backend.outputs.backend_exists }}" = "false" ]; then
-          echo "Initializing new backend..."
+          echo "Initializing new backend with dynamic configuration..."
           cd ./infra/terraform/environments/dev
-          terraform init -reconfigure
+          # Usar el script de inicialización dinámica
+          chmod +x ../../../scripts/init-backend.sh
+          ../../../scripts/init-backend.sh
         else
           echo "Initializing existing backend..."
           cd ./infra/terraform/environments/dev
