--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -54,15 +54,13 @@ jobs:
       run: |
         if [ "${{ steps.setup-backend.outputs.backend_exists }}" = "false" ]; then
           echo "Initializing new backend with dynamic configuration..."
-          cd ./infra/terraform/environments/dev
-          # Usar el script de inicialización dinámica
-          chmod +x ../../../scripts/init-backend.sh
-          ../../../scripts/init-backend.sh
+          chmod +x ./infra/terraform/scripts/init-backend.sh
+          ./infra/terraform/scripts/init-backend.sh
         else
           echo "Initializing existing backend..."
-          cd ./infra/terraform/environments/dev
           terraform init
         fi
+      working-directory: ./infra/terraform/environments/dev
 
     - name: Terraform Validate
       run: terraform validate
