--- a/.github/workflows/terraform-drift.yml
+++ b/.github/workflows/terraform-drift.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  TF_VERSION: 1.13.1  # ← CAMBIAR de 1.5.0 a 1.8.2
+  TF_VERSION: 1.13.1
   AWS_REGION: us-east-1
 
 jobs:
@@ -19,12 +19,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3  # ← ACTUALIZAR a v3
+      uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: ${{ env.TF_VERSION }}
 
     - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4  # ← ACTUALIZAR a v4
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -32,13 +32,26 @@ jobs:
 
     - name: Terraform Init
       run: |
-        echo "Initializing backend for drift detection..."
-        chmod +x ./infra/terraform/scripts/init-backend.sh
-        ./infra/terraform/scripts/init-backend.sh
+        echo "Initializing Terraform for drift detection..."
+        cd ./infra/terraform/environments/dev
+        
+        # Obtener valores dinámicamente
+        ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+        PROJECT_NAME=$(basename $(git rev-parse --show-toplevel))
+        ENVIRONMENT="dev"
+        
+        terraform init -reconfigure -input=false \
+          -backend-config="bucket=terraform-state-${ACCOUNT_ID}-${ENVIRONMENT}" \
+          -backend-config="key=${PROJECT_NAME}/${ENVIRONMENT}/terraform.tfstate" \
+          -backend-config="dynamodb_table=terraform-locks-${ACCOUNT_ID}" \
+          -backend-config="region=us-east-1" \
+          -backend-config="encrypt=true"
+        
+        echo "✅ Terraform initialized for drift detection"
       working-directory: ./
       
     - name: Check for drift
       run: |
         terraform plan -detailed-exitcode
       working-directory: ./infra/terraform/environments/dev
-      continue-on-error: true  # ← Esto ya está bien
+      continue-on-error: true
