--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [main, develop]
   push:
     branches: [main, develop]
-  workflow_dispatch: # Ejecución manual
+  workflow_dispatch:
 
 env:
   TF_VERSION: 1.13.1
@@ -16,6 +16,7 @@ jobs:
     name: 'Terraform Validate, Setup & Plan'
     runs-on: ubuntu-latest
     environment: ${{ github.ref == 'refs/heads/main' && 'production' || 'development' }}
+    timeout-minutes: 20
 
     steps:
     - name: Checkout code
@@ -40,7 +41,6 @@ jobs:
         chmod +x ./infra/terraform/scripts/check-backend.sh
         chmod +x ./infra/terraform/scripts/setup-backend.sh
         
-        # Usar valores directamente
         ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
         if ./infra/terraform/scripts/check-backend.sh; then
           echo "Backend already exists"
@@ -61,29 +61,18 @@ jobs:
         echo "Initializing Terraform with dynamic backend..."
         cd ./infra/terraform/environments/dev
         
-        # Obtener valores dinámicamente
         ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
         PROJECT_NAME=$(basename $(git rev-parse --show-toplevel))
-        ENVIRONMENT="dev"
         
-        echo "Initializing for:"
-        echo "Project: $PROJECT_NAME"
-        echo "Account: $ACCOUNT_ID"
-        echo "Environment: $ENVIRONMENT"
-        
-        # Inicializar Terraform completamente
         terraform init -reconfigure -input=false \
-          -backend-config="bucket=terraform-state-${ACCOUNT_ID}-${ENVIRONMENT}" \
-          -backend-config="key=${PROJECT_NAME}/${ENVIRONMENT}/terraform.tfstate" \
+          -backend-config="bucket=terraform-state-${ACCOUNT_ID}-dev" \
+          -backend-config="key=${PROJECT_NAME}/dev/terraform.tfstate" \
           -backend-config="dynamodb_table=terraform-locks-${ACCOUNT_ID}" \
           -backend-config="region=us-east-1" \
           -backend-config="encrypt=true"
         
-        # Forzar instalación de módulos y providers
         terraform get -update
-        
         echo "✅ Terraform initialization completed successfully!"
-        ls -la .terraform/
       working-directory: ./
 
     - name: Terraform Validate
@@ -92,17 +81,16 @@ jobs:
 
     - name: Install and Run tfsec
       run: |
-        # Descargar e instalar tfsec manualmente
         echo "Installing tfsec..."
         curl -sSL https://github.com/aquasecurity/tfsec/releases/download/v1.28.4/tfsec-linux-amd64 -o tfsec
         chmod +x tfsec
-        ./tfsec ./infra/terraform --soft-fail
+        ./tfsec ./infra/terraform --soft-fail --exclude-generated
       working-directory: ./
 
     - name: Terraform Plan
       run: |
         cd ./infra/terraform/environments/dev
-        timeout 600 terraform plan -no-color -out=tfplan
+        timeout 600 terraform plan -no-color -out=tfplan -lock-timeout=5m
       env:
         TF_CLI_ARGS: "-var-file=terraform.tfvars"
 
