feat: Complete CI/CD setup with Terraform and GitHub Actions

--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -84,7 +84,7 @@ jobs:
         echo "Installing tfsec..."
         curl -sSL https://github.com/aquasecurity/tfsec/releases/download/v1.28.4/tfsec-linux-amd64 -o tfsec
         chmod +x tfsec
-        ./tfsec ./infra/terraform --soft-fail --exclude-generated
+        ./tfsec ./infra/terraform --soft-fail --exclude-downloaded-modules
       working-directory: ./
 
     - name: Terraform Plan
