--- a/.github/workflows/terraform-cd.yml
+++ b/.github/workflows/terraform-cd.yml
@@ -84,7 +84,7 @@ jobs:
       working-directory: ./infra/terraform/environments/dev
 
     - name: Terraform Plan
-      run: terraform plan -input=false -out=tfplan -lock-timeout=5m
+      run: terraform plan -input=false -out=tfplan  -lock=false
       working-directory: ./infra/terraform/environments/dev
       env:
         TF_CLI_ARGS: "-var-file=terraform.tfvars"
