--- a/infra/terraform/Makefile
+++ b/infra/terraform/Makefile
@@ -1,38 +1,19 @@
-TF_VERSION := 1.5.0
-TF_DIR := environments/dev
-
-.PHONY: init plan apply destroy validate fmt setup-backend
+.PHONY: init plan apply destroy validate
 
 init:
-	terraform -chdir=$(TF_DIR) init
+	cd environments/dev && terraform init
 
 plan:
-	terraform -chdir=$(TF_DIR) plan
+	cd environments/dev && terraform plan -var-file="terraform.tfvars"
 
 apply:
-	terraform -chdir=$(TF_DIR) apply -auto-approve
+	cd environments/dev && terraform apply -auto-approve -var-file="terraform.tfvars"
 
 destroy:
-	terraform -chdir=$(TF_DIR) destroy -auto-approve
+	cd environments/dev && terraform destroy -auto-approve -var-file="terraform.tfvars"
 
 validate:
-	terraform validate $(TF_DIR)
+	cd environments/dev && terraform validate
 
 fmt:
 	terraform fmt -recursive
-
-setup-backend:
-	./scripts/setup-backend.sh
-
-# Para otros entornos
-dev-plan:
-	./scripts/tf-wrapper.sh dev plan
-
-dev-apply:
-	./scripts/tf-wrapper.sh dev apply
-
-staging-plan:
-	./scripts/tf-wrapper.sh staging plan
-
-prod-plan:
-	./scripts/tf-wrapper.sh prod plan
