--- a/.github/workflows/terraform-backend.yml
+++ b/.github/workflows/terraform-backend.yml
@@ -79,11 +79,13 @@ jobs:
       run: |
         if [ "${{ needs.check-existing-resources.outputs.bucket_exists }}" = "true" ] && [ "${{ needs.check-existing-resources.outputs.table_exists }}" = "true" ]; then
           echo "IMPORT_EXISTING=true" >> $GITHUB_ENV
-          echo "Resources exist, will import them" >> $GITHUB_STEP_SUMMARY
+          echo "Strategy: Import existing resources" >> $GITHUB_STEP_SUMMARY
         else
           echo "IMPORT_EXISTING=false" >> $GITHUB_ENV
-          echo "Resources don't exist, will create them" >> $GITHUB_STEP_SUMMARY
+          echo "Strategy: Create new resources" >> $GITHUB_STEP_SUMMARY
         fi
+        echo "Bucket exists: ${{ needs.check-existing-resources.outputs.bucket_exists }}" >> $GITHUB_STEP_SUMMARY
+        echo "Table exists: ${{ needs.check-existing-resources.outputs.table_exists }}" >> $GITHUB_STEP_SUMMARY
 
     - name: Terraform Init (Backend)
       run: |
@@ -120,9 +122,11 @@ jobs:
       run: |
         cd infra/terraform/modules/s3-backend
         
-        # Importar recursos existentes al estado de Terraform
-        terraform import aws_s3_bucket.existing[0] ${{ env.BACKEND_BUCKET }} || echo "Bucket already imported or doesn't exist"
-        terraform import aws_dynamodb_table.existing[0] ${{ env.LOCK_TABLE }} || echo "Table already imported or doesn't exist"
+        # Importar bucket S3 existente
+        terraform import 'aws_s3_bucket.existing[0]' ${{ env.BACKEND_BUCKET }} || echo "Bucket import may have failed or already exists in state"
+        
+        # Importar tabla DynamoDB existente
+        terraform import 'aws_dynamodb_table.existing[0]' ${{ env.LOCK_TABLE }} || echo "Table import may have failed or already exists in state"
         
         # Aplicar configuración para asegurar que los recursos tengan la configuración correcta
         terraform apply -auto-approve \
