--- a/.github/workflows/terraform-backend.yml
+++ b/.github/workflows/terraform-backend.yml
@@ -117,21 +117,18 @@ jobs:
           -var="lock_table_name=${{ env.LOCK_TABLE }}" \
           -var="import_existing=${{ env.IMPORT_EXISTING }}"
 
+    # En la sección de importación, cambiar a:
     - name: Import existing resources if needed
       if: env.IMPORT_EXISTING == 'true'
       run: |
         cd infra/terraform/modules/s3-backend
         
-        # Importar bucket S3 existente
-        terraform import 'aws_s3_bucket.existing[0]' ${{ env.BACKEND_BUCKET }} || echo "Bucket import may have failed or already exists in state"
+        # Importar bucket S3 existente si existe en AWS pero no en estado de Terraform
+        if [ "${{ needs.check-existing-resources.outputs.bucket_exists }}" = "true" ]; then
+          terraform import aws_s3_bucket.terraform_state[0] ${{ env.BACKEND_BUCKET }} || echo "Bucket import failed or already managed"
+        fi
         
-        # Importar tabla DynamoDB existente
-        terraform import 'aws_dynamodb_table.existing[0]' ${{ env.LOCK_TABLE }} || echo "Table import may have failed or already exists in state"
-        
-        # Aplicar configuración para asegurar que los recursos tengan la configuración correcta
-        terraform apply -auto-approve \
-          -var="bucket_name=${{ env.BACKEND_BUCKET }}" \
-          -var="region=${{ env.AWS_REGION }}" \
-          -var="project_name=${{ env.PROJECT_NAME }}" \
-          -var="lock_table_name=${{ env.LOCK_TABLE }}" \
-          -var="import_existing=true"
+        # Importar tabla DynamoDB existente si existe en AWS pero no en estado de Terraform
+        if [ "${{ needs.check-existing-resources.outputs.table_exists }}" = "true" ]; then
+          terraform import aws_dynamodb_table.terraform_state_lock[0] ${{ env.LOCK_TABLE }} || echo "Table import failed or already managed"
+        fi
