--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -5,7 +5,13 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-  workflow_dispatch: # Permite ejecución manual
+  workflow_dispatch:
+    inputs:
+      destroy_environment:
+        description: 'Destroy environment'
+        required: false
+        default: 'false'
+        type: boolean
 
 env:
   TF_VERSION: latest
@@ -26,12 +32,18 @@ jobs:
       with:
         terraform_version: ${{ env.TF_VERSION }}
 
+    # PRIMERO configurar credenciales AWS
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+
+    # LUEGO ejecutar comandos de Terraform
     - name: Terraform Init
       run: terraform init
       working-directory: ./infra/terraform
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Terraform Validate
       run: terraform validate
@@ -45,14 +57,8 @@ jobs:
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve
       working-directory: ./infra/terraform
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Terraform Destroy (Manual)
       if: github.event_name == 'workflow_dispatch' && github.event.inputs.destroy_environment == 'true'
       run: terraform destroy -auto-approve
       working-directory: ./infra/terraform
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
