--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -2,63 +2,49 @@ name: Terraform CI/CD
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   pull_request:
-    branches: [main]
+    branches: [ main ]
   workflow_dispatch:
-    inputs:
-      destroy_environment:
-        description: 'Destroy environment'
-        required: false
-        default: 'false'
-        type: boolean
 
-env:
-  TF_VERSION: latest
-  AWS_REGION: us-east-1
+permissions:
+  contents: read
 
 jobs:
   terraform:
-    name: Terraform
     runs-on: ubuntu-latest
-    environment: dev
+    environment: production
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: ${{ env.TF_VERSION }}
+      - name: Configurar credenciales AWS
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }} # opcional
+          aws-region: us-east-1
 
-    # PRIMERO configurar credenciales AWS
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: "1.6.0"
 
-    # LUEGO ejecutar comandos de Terraform
-    - name: Terraform Init
-      run: terraform init
-      working-directory: ./infra/terraform
+      - name: Terraform Init
+        working-directory: infra/terraform/environments/dev
+        run: terraform init -input=false
 
-    - name: Terraform Validate
-      run: terraform validate
-      working-directory: ./infra/terraform
+      - name: Terraform Validate
+        working-directory: infra/terraform/environments/dev
+        run: terraform validate
 
-    - name: Terraform Plan
-      run: terraform plan
-      working-directory: ./infra/terraform
+      - name: Terraform Plan
+        working-directory: infra/terraform/environments/dev
+        run: terraform plan -out=tfplan -input=false
 
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply -auto-approve
-      working-directory: ./infra/terraform
-
-    - name: Terraform Destroy (Manual)
-      if: github.event_name == 'workflow_dispatch' && github.event.inputs.destroy_environment == 'true'
-      run: terraform destroy -auto-approve
-      working-directory: ./infra/terraform
+      - name: Terraform Apply (solo en push a main)
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        working-directory: infra/terraform/environments/dev
+        run: terraform apply -input=false -auto-approve tfplan
